<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background" android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical" android:layout_weight="0.7">

        <TextView
                android:id="@+id/tittle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/main_page_tittle"
                android:gravity="center_horizontal"
                android:textSize="@dimen/RubricNameText"
                android:layout_alignParentTop="true" android:layout_alignParentRight="true"
                android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="2" android:baselineAligned="false">
        <Button
                android:id="@+id/status_of_keys"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/main_page_status_of_key"
                android:textSize="@dimen/ButtonText"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/button_text_color"
                android:background="@drawable/button_blue"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tittle"
                android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="2" android:layout_marginTop="10dp">
        <Button
                android:id="@+id/give_key_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/key_status_changing_give"
                android:textSize="@dimen/ButtonText"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/button_text_color"
                android:background="@drawable/button_blue"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/status_of_keys" android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="2">
        <Button
                android:id="@+id/get_key_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/key_status_changing_get"
                android:textSize="@dimen/ButtonText"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/button_text_color"
                android:background="@drawable/button_blue"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/give_key_button"
                android:layout_below="@+id/give_key_button" android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="2">
        <Button
                android:id="@+id/show_journal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/preview_journal"
                android:textSize="@dimen/ButtonText"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/button_text_color"
                android:background="@drawable/button_blue"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/give_key_button"
                android:layout_below="@+id/give_key_button" android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="2"
            >
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/guard_change_text"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_blue" android:layout_margin="5dp" android:focusable="true"
                android:id="@+id/guard_change" android:textSize="@dimen/ButtonText"
                android:textColor="@color/button_text_color"/>
    </LinearLayout>
</LinearLayout>