<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:orientation="vertical">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1">
        <TextView
                        android:id="@+id/tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/identification_tittle"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/RubricNameText"
                        android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
                        android:textStyle="bold"/>
        <TextView
                android:id="@+id/person_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:singleLine="false"
                android:layout_below="@+id/tittle"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dp" android:gravity="center_horizontal"/>
    </LinearLayout>
    <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:contentDescription="@string/identification_image_description"
            />
    <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/invalid_photo_text"
            android:id="@+id/invalid_photo_button" android:layout_weight="1" android:background="@drawable/button_red"
            android:layout_gravity="center_horizontal" android:layout_margin="5dp"
            android:textSize="@dimen/ButtonText" android:textColor="@color/button_text_color"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="4">
        <TextView
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:text="@string/key_selection_tittle"
                        android:id="@+id/textView"
                        android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/RubricNameText" android:textStyle="bold"/>
        <GridView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/gridViewOfIdentification"
                        android:layout_centerHorizontal="true" android:columnWidth="80dp"
                        android:numColumns="auto_fit" android:gravity="center"
                        android:layout_alignParentBottom="true" android:layout_below="@+id/textView"
                        android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>